--- a/GroupBuy/src/main/webapp/WEB-INF/web.xml
+++ b/GroupBuy/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,7 @@
 	    <welcome-file>default.htm</welcome-file>
 	</welcome-file-list>
   	
+  	<!-- 全網加密 -->
   	<security-constraint>
     	<display-name>Constraint1</display-name>
     	<web-resource-collection>
